// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Dropzone with file 1`] = `
Array [
  <div
    className="Dropzone "
    onClick={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <input
      accept=".csv"
      className="FileInput"
      id="uploadCaptureInputFile"
      onChange={[Function]}
      type="file"
    />
    <svg
      className="FileIcon my-3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 384 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
      />
    </svg>
    <span
      className="Filename"
    >
      test
    </span>
  </div>,
  <div
    className="fade alert alert-danger show"
    role="alert"
    style={
      Object {
        "marginTop": 10,
      }
    }
  />,
]
`;

exports[`renders Dropzone page 1`] = `
Array [
  <div
    className="Dropzone "
    onClick={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  >
    <input
      accept=".csv"
      className="FileInput"
      id="uploadCaptureInputFile"
      onChange={[Function]}
      type="file"
    />
    <svg
      className="UploadIcon my-3"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 384 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm65.18 216.01H224v80c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-80H94.82c-14.28 0-21.41-17.29-11.27-27.36l96.42-95.7c6.65-6.61 17.39-6.61 24.04 0l96.42 95.7c10.15 10.07 3.03 27.36-11.25 27.36zM377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z"
      />
    </svg>
    <span
      className="Filename"
    >
      Choose a file
    </span>
  </div>,
  <div
    className="fade alert alert-danger show"
    role="alert"
    style={
      Object {
        "marginTop": 10,
      }
    }
  />,
]
`;
